--- a/README
+++ b/README
@@ -5,4 +5,4 @@ Just a "light" pixelfed container, based on Alpine Linux instead of heavy Ubuntu
 podman run -d jinternux/pixelfed
 
 ## Listener
-The listener is set to /run/php.sock instead of :9000
+The listener is set to /run/pixelfed.sock instead of :9000
